kustomize/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-task
  labels:
    istio-injection: enabled
