kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-task
spec:
  type: ClusterIP
  selector:
    app: devops-task
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
