kustomize/istio-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: devops-task
  namespace: devops-task
spec:
  hosts:
    - "devops-task.app"
  gateways:
    - ingress-gateway-configuration
  http:
  - match:
    - uri:
        exact: /
    - route:
        - destination:
            host: devops-task.devops-task.svc.cluster.local
            port:
              number: 80
